--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
                <p class='courseUnder' style="color:#000;margin-top:10px;"><span><font color="#ff3300">*</font>手机号码：</span></p>
                <p class='courseUnder' style="padding-left:30px;"><span><input type="text" name="sjhm" id="sjhm" class="content-inp" value="18361272323" readonly/></span></p>
                <p class='courseUnder' style="color:#000;margin-top:10px;"><span><font color="#ff3300">*</font>出校日期：</span></p>
-               <p class='courseUnder' style="padding-left:30px;"><span><input type="text" name="cxrq" id="cxrq" class="content-inp" value="2020-08-16" readonly/></span></p>
+               <p class='courseUnder' style="padding-left:30px;"><span><input type="text" name="cxrq" id="cxrq" class="content-inp" value="2020-08-16 12" readonly/></span></p>
                <p class='courseUnder' style="color:#000;margin-top:10px;"><span><font color="#ff3300">*</font>返校日期：</span></p>
-               <p class='courseUnder' style="padding-left:30px;"><span><input type="text" name="fxrq" id="fxrq" class="content-inp" value="2020-08-16" readonly/></span></p>
+               <p class='courseUnder' style="padding-left:30px;"><span><input type="text" name="fxrq" id="fxrq" class="content-inp" value="2020-08-16 21" readonly/></span></p>
                <p class='courseUnder' style="color:#000;margin-top:10px;"><span><font color="#ff3300">*</font>扫码结果：</span></p>
                <p class='courseUnder' style="padding-left:30px;"><span><input style="color:#cc0000" type="text"  name="shzt" id="shzt" class="content-inp" value="允许进校" readonly/></span></p>
                <p class='courseUnder' style="color:#000;margin-top:10px;"><span><font color="#ff3300">*</font>扫码时间：</span></p>
