--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <body>
 <form name="baseForm" method="post" action="/index.do">
    <nav class="navbar-header" id="navbar-header">
-      <div class="navbar-tlt" style="line-height:44px;height:44px;backgroundcolor:#666;text-align:center;letter-spacing: 1em;">扫码结果</div>
+      <div class="navbar-tlt" style="line-height:44px;height:44px;background:#efefef;color:#666;text-align:center;letter-spacing: 1em;">扫码结果</div>
    </nav>
     <div class="content">
        <div class='comBox'>
@@ -111,7 +111,7 @@
                <p class='courseUnder' id="shyj_inp" style="padding-left:30px;display:none;"><span><input type="text" name="shyj" id="shyj" class="content-inp" value="" readonly/></span></p>
              </div>
              <div style="width:80px; line-height:48px;height:48px;background:#fff;margin-top:30px;margin-left:160px" id="btn_div">
-               <div style="line-height:36px;height:36px;width:80px;float:left;backgroundcolor: #fff;border-radius: 3px;box-shadow: 2px 2px 10px #c3d3ea, -2px -2px 10px #c3d3ea;text-align:center;margin-top:8px;" onclick="referForm('leaveSchoolApp.do?method=show')"><i class='icon-arrow-left' style='font-size'></i>返回</div>
+               <div style="line-height:36px;height:36px;width:80px;float:left;background: #006699;color: #fff;border-radius: 3px;box-shadow: 2px 2px 10px #c3d3ea, -2px -2px 10px #c3d3ea;text-align:center;margin-top:8px;" onclick="referForm('leaveSchoolApp.do?method=show')"><i class='icon-arrow-left' style='font-size'></i>返回</div>
              </div>
           </div>
        </div>
