--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <body>
 <form name="baseForm" method="post" action="/index.do">
    <nav class="navbar-header" id="navbar-header">
-      <div class="navbar-tlt" style="line-height:44px;height:44px;background:#efefef;color:#666;text-align:center;letter-spacing: 1em;">扫码结果</div>
+      <div class="navbar-tlt" style="line-height:44px;height:44px;background:#efefef;color:#666;font-size: 18px;letter-spacing: 2px;text-align:center;">扫码结果</div>
    </nav>
     <div class="content">
        <div class='comBox'>
