--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title></title>
+<title>出校申请</title>
 <meta content="all" name="robots" />
 <meta name="author" content="作者信息" />
 <meta name="Copyright" content="版权信息" />
