--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 <meta content="telephone=no" name="format-detection"/>
 <link type="text/css" rel="stylesheet" href="assets/css/font-awesome.min.css" />
 <link type="text/css" rel="stylesheet" href="css/main.css" />
+<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 <script src="js/jquery.min.js"></script>
 <script src="js/common.js"></script>
 <script type="text/javascript" src="layer_mobile/layer.js"></script>
